# Webex-generic-account-bot

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
config/: example.toml
deploy/systemd/: webex-codex-activation-renew.service  webex-codex-activation.tmpfiles.conf  webex-codex-input-staging.tmpfiles.conf  webex-codex-launcher.socket  webex-codex-launcher.sysusers.conf  webex-codex-launcher.tmpfiles.conf  webex-codex-launcher@.service  webex-codex-runtime.sysusers.conf  webex-codex-runtime.tmpfiles.conf  webex-config-pull-worker.service  webex-config-pull-worker.sysusers.conf  webex-config-pull-worker.tmpfiles.conf  webex-generic-account-bot.service  webex-generic-account-bot.sysusers.conf  (+1 more)
docs/: PROJECT_STATE.md  PROJECT_TODO.md
scripts/: build-codex-runtime-image.mjs  config-pull-worker.mjs  deploy-config.mjs  e2e-webex-bot.mjs  jenkins-readonly.mjs  provision-host.mjs  setup-ci.mjs
src/: activation.rs  activation_canary.rs  canary_exec.rs  canary_host.rs  canary_protocol.rs  codex_launcher.rs  config.rs  config_actions.rs  config_commands.rs  config_status.rs  input_sealer.rs  isolated_execution.rs  launcher_client.rs  launcher_protocol.rs  lib.rs  main.rs  policy.rs  runner.rs  runner_input.rs  webex.rs  work_budget.rs
test/: base-bot-systemd.node-test.mjs  codex-launcher-systemd.node-test.mjs  codex-runtime-image.node-test.mjs  config-pull-worker.node-test.mjs  deploy-config.node-test.mjs  e2e-webex-bot.node-test.mjs  provision-host.node-test.mjs  run-node-tests.mjs  setup-ci.node-test.mjs
(+13 files in other folders)
