[package]
name = "webex-generic-account-bot"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Generic-account Webex bot layer that dispatches space-specific prompts to Codex."
license = "Apache-2.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
webex-headless-messenger = "0.1.0"
